--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,13 +1,13 @@
 server {
         listen 80;
-        listen 443 ssl http2;
+#        listen 443 ssl http2;
         server_name "{{ work_domain }}";
         root /var/www/html/{{ work_dir }}/public;
     if ($ssl_protocol = "") {
         rewrite ^/(.*) https://$server_name/$1 permanent;
     }
-    ssl_certificate /usr/local/etc/nginx/ssl/emailer.dev.crt;
-    ssl_certificate_key /usr/local/etc/nginx/ssl/emailer.dev.key;
+#    ssl_certificate /usr/local/etc/nginx/ssl/emailer.dev.crt;
+#    ssl_certificate_key /usr/local/etc/nginx/ssl/emailer.dev.key;
 
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 5m;
