--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,8 +1,8 @@
 server {
         listen 80;
 #        listen 443 ssl http2;
-        server_name "{{ work_domain }}";
-        root /var/www/html/{{ work_dir }}/public;
+        server_name {{ work_domain }};
+        root {{ work_dir }}/public;
     if ($ssl_protocol = "") {
         rewrite ^/(.*) https://$server_name/$1 permanent;
     }
@@ -25,6 +25,9 @@ server {
         }
         location = /favicon.ico { access_log off; log_not_found off; }
         location = /robots.txt  { access_log off; log_not_found off; }
+
+    access_log /var/log/nginx/{{ work_domain }}-access.log;
+    error_log  /var/log/nginx/{{ work_domain }}-error.log error;
  
       location ~ \.php$ {
          try_files      $uri = 404;
