--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,7 +1,14 @@
 server {
         listen 80;
+        #listen 443 ssl http2;
         server_name {{ work_domain }};
         root /Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/public;
+        if ($ssl_protocol = "") {
+            rewrite ^/(.*) https://$server_name/$1 permanent;
+    }
+    #ssl_certificate /usr/local/etc/nginx/ssl/emailer.dev.crt;
+    #ssl_certificate_key /usr/local/etc/nginx/ssl/emailer.dev.key;
+
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 5m;
     keepalive_timeout 70;
@@ -19,8 +26,8 @@ server {
         location = /favicon.ico { access_log off; log_not_found off; }
         location = /robots.txt  { access_log off; log_not_found off; }
 
-    access_log /usr/local/var/log/nginx/{{ work_domain }}.access.log;
-    error_log  /usr/local/var/log/nginx/{{ work_domain }}.error.log;
+	access_log /usr/local/var/log/nginx/{{ work_domain }}.access.log;
+	error_log  /usr/local/var/log/nginx/{{ work_domain }}.error.log;
 
       location ~ \.php$ {
          try_files      $uri = 404;
