--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,7 +1,7 @@
 server {
     listen 80;
 #    listen 443 ssl http2;
-    server_name "{{ work_domain }}";
+    server_name {{ work_domain }};
     root /var/www/html/{{ work_dir }}/public;
     if ($ssl_protocol = "") {
         rewrite ^/(.*) https://$server_name/$1 permanent;
