--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,43 +1,57 @@
 server {
-        listen 80;
-        #listen 443 ssl http2;
-        server_name {{ work_domain }};
-        root /Users/{{ work_user }}/{{ work_dir }}/{{ work_domain }}/public;
-        if ($ssl_protocol = "") {
-            rewrite ^/(.*) https://$server_name/$1 permanent;
+    listen 80;
+#    listen 443 ssl http2;
+    server_name {{ work_domain }};
+    root {{ work_dir }}/public;
+    if ($ssl_protocol = "") {
+        rewrite ^/(.*) https://$server_name/$1 permanent;
     }
-    #ssl_certificate /usr/local/etc/nginx/ssl/emailer.dev.crt;
-    #ssl_certificate_key /usr/local/etc/nginx/ssl/emailer.dev.key;
+#    ssl_certificate /usr/local/etc/nginx/ssl/laravel.dev.crt;
+#    ssl_certificate_key /usr/local/etc/nginx/ssl/laravel.dev.key;
 
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_timeout 5m;
+#    ssl_session_cache shared:SSL:50m;
+#    ssl_session_timeout 5m;
     keepalive_timeout 70;
 
-    ssl_prefer_server_ciphers on;
-    ssl_protocols TLSv1.2;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+#    ssl_prefer_server_ciphers on;
+#    ssl_protocols TLSv1.2;
+#    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
 
-        # Add index.php to the list if you are using PHP
-        index index.php index.html index.htm index.nginx-debian.html;
-        charset utf-8;
-        location / {
+    index index.php index.html index.htm index.nginx-debian.html;
+    charset utf-8;
+
+    location / {
         try_files $uri $uri/ /index.php?$query_string;
-        }
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location = /robots.txt  { access_log off; log_not_found off; }
+    }
 
-	access_log /usr/local/var/log/nginx/{{ work_domain }}.access.log;
-	error_log  /usr/local/var/log/nginx/{{ work_domain }}.error.log;
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
-      location ~ \.php$ {
-         try_files      $uri = 404;
-         fastcgi_pass   127.0.0.1:9000;
-         fastcgi_index  index.php;
-         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-         include        fastcgi_params;
-        }
+    access_log /usr/local/var/log/nginx/{{ work_domain }}.access.log;
+    error_log  /usr/local/var/log/nginx/{{ work_domain }}.error.log;
 
-        location ~ /\.ht {
-               deny all;
-        }
+    location ~ \.php$ {
+        try_files      $uri = 404;
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+{% if socket == true %}
+
+    location /socket.io/ {
+        proxy_pass http://127.0.0.1:7000;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+{% endif %}
+
+    location ~ /\.ht {
+        deny all;
+    }
 }
